refactor: better explanations on a few examples.

--- a/src/app/dom-reuse/reuse-detail/reuse-detail.component.html
+++ b/src/app/dom-reuse/reuse-detail/reuse-detail.component.html
@@ -1,3 +1,7 @@
 <div>
+  <p>
+    Each of the ReuseDetailComponents make efficient use of existing tags to avoid unnecessary DOM manipulation, even
+    when details change.
+  </p>
   <h1>{{ url }}</h1>
 </div>
