--- a/src/app/behavior-subject/behavior-subject.component.html
+++ b/src/app/behavior-subject/behavior-subject.component.html
@@ -20,10 +20,16 @@
 
   <hr/>
 
-  <p>BehaviorSubject can also be used to implement a service that shuttles values among components. The below two
+  <p>BehaviorSubject can also be used to implement an event bus that shuttles values among components. The below two
      components use an EventBusService which wraps a BehaviorSubject to communicate.
   </p>
 
-  <app-sender></app-sender>
-  <app-listener></app-listener>
+  <div style="border: 1px solid black; margin: 5px;">
+    Component 1
+    <app-sender></app-sender>
+  </div>
+  <div style="border: 1px solid black; margin: 5px;">
+    Component 2
+    <app-listener></app-listener>
+  </div>
 </div>
